--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@supabase/supabase-js": "^2.43.4",
     "expo": "^52.0.36",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "metro": "^0.81.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.7",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13",
-    "expo-splash-screen": "~0.29.22"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
