--- a/app.json
+++ b/app.json
@@ -18,10 +18,11 @@
       "splash": {
         "image": "./assets/light/splash.png",
         "resizeMode": "cover",
-        "backgroundColor": "#f2f2f2"
+        "backgroundColor": "#DFE3E6"
       }
     },
     "android": {
+      "edgeToEdgeEnabled": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#f2f2f2"
@@ -29,7 +30,12 @@
       "splash": {
         "image": "./assets/light/splash.png",
         "resizeMode": "cover",
-        "backgroundColor": "#f2f2f2"
+        "backgroundColor": "#DFE3E6",
+        "dark": {
+          "image": "./assets/dark/splash.png",
+          "resizeMode": "cover",
+          "backgroundColor": "#000"
+        }
       },
       "package": "com.fxnnbxchxn.soussupa"
     },
