--- a/app.json
+++ b/app.json
@@ -19,10 +19,10 @@
     "android": {
       "edgeToEdgeEnabled": true,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/light/splash.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#f2f2f2",
         "dark": {
-          "foregroundImage": "./assets/dark/splash.png",
+          "foregroundImage": "./assets/adaptive-icon.png",
           "backgroundColor": "#000"
         }
       },
