moving planned recipe function to rpc; fixing bad storage of arrays in db; starting work on autogeneration of lists

--- a/app.json
+++ b/app.json
@@ -27,11 +27,11 @@
         }
       },
       "splash": {
-        "image": "./assets/light/splash.png",
+        "image": "./assets/light/splash_light.png",
         "resizeMode": "cover",
         "backgroundColor": "#DFE3E6",
         "dark": {
-          "image": "./assets/dark/splash.png",
+          "image": "./assets/dark/splash_dark.png",
           "resizeMode": "cover",
           "backgroundColor": "#000"
         }
