--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@supabase/supabase-js": "^2.43.4",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "^53.0.9",
+    "expo": "53.0.20",
+    "expo-crypto": "^14.1.5",
     "expo-image-picker": "~16.1.4",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
     "metro": "^0.82.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.3",
-    "react-native-web": "^0.20.0",
-    "expo-system-ui": "~5.0.9"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
